--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 # Data for testing creation of the reports
 data/*.xlsx
+!data/template.xlsx
 # Virtual environment
-.venv/
+.venv*/
 # Python cache
 __pycache__/
